--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     />
     <meta name="theme-color" content="#ffffff" />
 
-    <title>THE PRACTICAL LAB</title>
+    <title>Facebook</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/style.css" />
